Half way done refactoring classNameUtils functon names to indicate components and elements

--- a/client/src/CSS/scss_partials/home/_home.scss
+++ b/client/src/CSS/scss_partials/home/_home.scss
@@ -1,7 +1,7 @@
 @use "../utils/variables" as v;
 @use "../utils/mixins" as m;
 
-.home-container {
+.home-component {
 	position: absolute;
 	top: 0;
 	left: 0;
