--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -128,7 +128,7 @@ body {
 		color: v.$mode-common-top-bar-button-and-dropdown-text-color-dark;
 	}
 
-	// Light/Dark mode -- Home 'home-container' component -- background and text colors
+	// Light/Dark mode -- Home component 'home-component' element -- background and text colors
 	.js-get-home-component-background-and-text-color-dark-mode-false {
 		background-color: v.$mode-home-background-color-light;
 		color: v.$mode-home-text-color-light;
@@ -309,90 +309,106 @@ body {
 		}
 	}
 
-	// Light/Dark mode -- CreateItemSidebar -- background color
-	.js-get-create-item-sidebar-background-color-dark-mode-false {
+	// Light/Dark mode -- CreateItemSidebar component 'sidebar-container' element -- background color
+	.js-get-create-item-sidebar-component-sidebar-container-element-background-color-dark-mode-false {
 		background-color: v.$mode-create-item-sidebar-background-color-light;
 	}
-	.js-get-create-item-sidebar-background-color-dark-mode-true {
+	.js-get-create-item-sidebar-component-sidebar-container-element-background-color-dark-mode-true {
 		background-color: v.$mode-create-item-sidebar-background-color-dark;
 	}
 
-	// Light/Dark mode -- CreateItemSidebar form-label -- disabled text color with no pointer events
-	.js-get-create-item-sidebar-diabled-label-dark-mode-false {
+	// Light/Dark mode -- CreateItemSidebar component 'form__group-container__input-container__label' element -- disabled (i.e. no pointer events and grayed out text color)
+	.js-get-create-item-sidebar-component-label-element-diabled-dark-mode-false {
 		color: v.$mode-create-item-sidebar-form-disabled-text-color-light;
 		pointer-events: none;
 	}
-	.js-get-create-item-sidebar-diabled-label-dark-mode-true {
+	.js-get-create-item-sidebar-component-label-element-diabled-dark-mode-true {
 		color: v.$mode-create-item-sidebar-form-disabled-text-color-dark;
 		pointer-events: none;
 	}
 
-	// Light/Dark mode -- CreateItemSidebar form input (type date) element -- disabled background and text color with no pointer events
-	.js-get-create-item-sidebar-diabled-input-date-dark-mode-false {
+	// Light/Dark mode -- CreateItemSidebar component 'form__group-container__input-container__date' element -- disabled (i.e. no pointer events and grayed out text color)
+	.js-get-create-item-sidebar-component-input-date-element-diabled-input-date-dark-mode-false {
 		background-color: v.$mode-create-item-sidebar-form-disabled-background-color-light;
 		color: v.$mode-create-item-sidebar-form-disabled-text-color-dark;
 		pointer-events: none;
 	}
-	.js-get-create-item-sidebar-diabled-input-date-dark-mode-true {
+	.js-get-create-item-sidebar-component-input-date-element-diabled-input-date-dark-mode-true {
 		background-color: v.$mode-create-item-sidebar-form-disabled-background-color-dark;
 		color: v.$mode-create-item-sidebar-form-disabled-text-color-dark;
 		pointer-events: none;
 	}
 
-	// Light/Dark mode -- ListViewTable 'list-table__row__header' -- box shadow and background color
-	.js-get-list-view-table-row-header-box-shadow-and-background-color-dark-mode-false {
+	// Light/Dark mode -- ListViewTable component 'list-table__row__header' element -- box shadow and background color
+	.js-get-list-view-table-component-row-header-element-box-shadow-and-background-color-dark-mode-false {
 		box-shadow: v.$mode-list-view-table-row-header-box-shadow-light;
 		background-color: v.$mode-list-view-table-row-header-background-color-light;
 	}
-	.js-get-list-view-table-row-header-box-shadow-and-background-color-dark-mode-true {
+	.js-get-list-view-table-component-row-header-element-box-shadow-and-background-color-dark-mode-true {
 		box-shadow: v.$mode-list-view-table-row-header-box-shadow-dark;
 		background-color: v.$mode-list-view-table-row-header-background-color-dark;
 	}
 
-	// Light/Dark mode -- ListViewTableItemRow 'list-table__row' -- border, background, and text colors
-	.js-get-list-view-table-item-row-border-background-text-color-dark-mode-false {
+	// Light/Dark mode -- ListView Component 'empty-list-message-centering-container__message' element -- text color
+	.js-get-list-view-component-empty-list-message-element-text-color-dark-mode-false {
+		color: v.$mode-list-view-empty-list-message-text-color-light;
+	}
+	.js-get-list-view-component-empty-list-message-element-text-color-dark-mode-true {
+		color: v.$mode-list-view-empty-list-message-text-color-dark;
+	}
+
+	// Light/Dark mode -- ListViewTableItemRow component list-view-table-item-row-component' element -- border, background, and text colors
+	.js-get-list-view-table-item-row-component-border-background-text-color-dark-mode-false {
 		border-color: v.$mode-list-view-table-row-border-color-light;
 		background-color: v.$mode-list-view-table-row-background-color-light;
 		color: v.$mode-common-weak-text-color-light;
 	}
-	.js-get-list-view-table-item-row-border-background-text-color-dark-mode-true {
+	.js-get-list-view-table-item-row-component-border-background-text-color-dark-mode-true {
 		border-color: v.$mode-list-view-table-row-border-color-dark;
 		background-color: v.$mode-list-view-table-row-background-color-dark;
 		color: v.$mode-common-weak-text-color-dark;
 	}
 
-	// Light/Dark mode -- ListViewTableItemRow 'list-table__row' -- hover background color
-	.js-get-list-view-table-item-row-hover-background-color-dark-mode-false {
+	// Light/Dark mode -- ListViewTableItemRow component list-view-table-item-row-component' element -- hover background color
+	.js-get-list-view-table-item-row-component-hover-background-color-dark-mode-false {
 		// Only hover since active causes td to cover border
 		&:hover {
 			background-color: v.$mode-list-view-table-row-hover-background-color-light;
 		}
 	}
-	.js-get-list-view-table-item-row-hover-background-color-dark-mode-true {
+	.js-get-list-view-table-item-row-component-hover-background-color-dark-mode-true {
 		// Only hover since active causes td to cover border
 		&:hover {
 			background-color: v.$mode-list-view-table-row-hover-background-color-dark;
 		}
 	}
 
-	// Light/Dark mode -- ListViewTableItemRow 'list-table__row' -- selected background color
-	.js-get-list-view-table-item-row-selected-background-color-dark-mode-false {
+	// Light/Dark mode -- ListViewTableItemRow component list-view-table-item-row-component' element -- selected background color
+	.js-get-list-view-table-item-row-component-selected-background-color-dark-mode-false {
 		background-color: v.$mode-list-view-table-row-selected-background-color-light;
 	}
-	.js-get-list-view-table-item-row-selected-background-color-dark-mode-true {
+	.js-get-list-view-table-item-row-component-selected-background-color-dark-mode-true {
 		background-color: v.$mode-list-view-table-row-selected-background-color-dark;
 	}
 
-	// Light/Dark mode -- DeleteModal -- background color
-	.js-get-delete-modal-background-color-dark-mode-false {
+	// Light/Dark mode -- DeleteModal component 'modal-container' element -- background color
+	.js-get-delete-modal-component-modal-container-element-background-color-dark-mode-false {
 		background-color: v.$mode-delete-modal-background-color-light;
 	}
-	.js-get-delete-modal-background-color-dark-mode-true {
+	.js-get-delete-modal-component-modal-container-element-background-color-dark-mode-true {
 		background-color: v.$mode-delete-modal-background-color-dark;
 	}
 
-	// Light/Dark mode -- DeleteModal delete-button -- background (with hover) color
-	.js-get-delete-modal-delete-button-background-color-dark-mode-false {
+	// Light/Dark mode -- DeleteModal component 'warning-trapazoid' element -- border color
+	.js-get-delete-modal-component-trapazoid-element-border-color-dark-mode-false {
+		border-top-color: v.$mode-delete-modal-trapazoid-border-color-light;
+	}
+	.js-get-delete-modal-component-trapazoid-element-border-color-dark-mode-true {
+		border-top-color: v.$mode-delete-modal-trapazoid-border-color-dark;
+	}
+
+	// Light/Dark mode -- DeleteModal component 'centered-buttons-container__button' element -- background (with hover) color
+	.js-get-delete-modal-component-delete-button-element-background-color-dark-mode-false {
 		background-color: v.$mode-delete-modal-delete-button-background-color-light;
 
 		&:hover,
@@ -400,7 +416,7 @@ body {
 			background-color: v.$mode-delete-modal-delete-button-hover-background-color-light;
 		}
 	}
-	.js-get-delete-modal-delete-button-background-color-dark-mode-true {
+	.js-get-delete-modal-component-delete-button-element-background-color-dark-mode-true {
 		background-color: v.$mode-delete-modal-delete-button-background-color-dark;
 
 		&:hover,
@@ -409,8 +425,8 @@ body {
 		}
 	}
 
-	// Light/Dark mode -- DeleteModal cancel-button -- border, background (with hover), text color
-	.js-get-delete-modal-cancel-button-border-background-text-color-dark-mode-false {
+	// Light/Dark mode -- DeleteModal component 'centered-buttons-container__button--cancel' element -- border, background (with hover), text color
+	.js-get-delete-modal-component-cancel-button-element-border-background-text-color-dark-mode-false {
 		border-color: v.$mode-delete-modal-cancel-button-border-text-color-light;
 		background-color: v.$mode-delete-modal-cancel-button-background-color-light;
 		color: v.$mode-delete-modal-cancel-button-border-text-color-light;
@@ -420,7 +436,7 @@ body {
 			background-color: v.$mode-delete-modal-cancel-button-hover-background-color-light;
 		}
 	}
-	.js-get-delete-modal-cancel-button-border-background-text-color-dark-mode-true {
+	.js-get-delete-modal-component-cancel-button-element-border-background-text-color-dark-mode-true {
 		border-color: v.$mode-delete-modal-cancel-button-border-text-color-dark;
 		background-color: v.$mode-delete-modal-cancel-button-background-color-dark;
 		color: v.$mode-delete-modal-cancel-button-border-text-color-dark;
@@ -429,22 +445,6 @@ body {
 		&:active {
 			background-color: v.$mode-delete-modal-cancel-button-hover-background-color-dark;
 		}
-	}
-
-	// Light/Dark mode -- DeleteModal warning-trapazoid -- border color
-	.js-get-delete-modal-trapazoid-border-color-dark-mode-false {
-		border-top-color: v.$mode-delete-modal-trapazoid-border-color-light;
-	}
-	.js-get-delete-modal-trapazoid-border-color-dark-mode-true {
-		border-top-color: v.$mode-delete-modal-trapazoid-border-color-dark;
-	}
-
-	// Light/Dark mode -- ListView empty-list-message -- text color
-	.js-get-list-view-empty-list-message-text-color-dark-mode-false {
-		color: v.$mode-list-view-empty-list-message-text-color-light;
-	}
-	.js-get-list-view-empty-list-message-text-color-dark-mode-true {
-		color: v.$mode-list-view-empty-list-message-text-color-dark;
 	}
 
 	// Light/Dark mode -- ItemViewTopBar icon-button -- text color with hover
@@ -652,7 +652,7 @@ body {
 	}
 
 	//========
-	// Themes 
+	// Themes
 	//========
 	// Theme -- Common (i.e. used by multiple components) -- border color
 	.js-get-common-brighter-border-color-theme-blue-turkish {
