--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
@@ -22,8 +22,7 @@
 		min-width: v.$list-view-table-min-width;
 	}
 
-	.list-table__row,
-	.js-get-list-view-table-component-row-element {
+	@mixin table-row() {
 		@include m.stop-text-selection();
 		
 		border-bottom: 1px solid v.$mode-list-view-table-row-border-color-light;
@@ -33,7 +32,13 @@
 		text-align: center;
 	}
 
-	.list-table__row--item-row {
+	.list-table__row,
+	.js-get-list-view-table-component-row-element {
+		@include table-row();
+	}
+
+	.list-view-table-item-row-component {
+		@include table-row();
 		color: v.$mode-common-weak-text-color-light;
 	}
 
