--- a/client/src/CSS/scss_partials/home/account/_accountModal.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountModal.scss
@@ -24,12 +24,12 @@
 		font-family: Arial, Helvetica, sans-serif;
 	}
 
-	.back-button {
-		@include m.back-button();
+	.back-icon-button {
+		@include m.back-icon-button();
 	}
 
-	.exit-button {
-		@include m.exit-button();
+	.exit-icon-button {
+		@include m.exit-icon-button();
 	}
 
 	.title {
